# py-utils

./: README.md  pyproject.toml
py_utils/: __init__.py  cap_string.py  chunks.py  clear_string.py  extract_all.py  helpers.py  home.py  human_sizeof.py  md5_key.py  md5_sum.py  mkpassword.py  now.py  print_duration.py  read_json.py  write_json.py
tests/: __init__.py  test_chunks.py  test_download.py  test_mkpassword.py
